Fixed classpage sizing/invisible bar bug, Fixes #57

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -77,8 +77,9 @@ body {
     padding-top: 20px;
     padding-left: 30px;
     padding-right: 15px;
-    max-height: calc(100vh - 76px);
-    min-height: calc(100vh - 76px);
+    padding-bottom: 20px;
+    max-height: calc(100vh - 56px);
+    min-height: calc(100vh - 56px);
     width: calc(100vw - 300px);
     overflow-y: auto;
 }
